[tool.poetry]
name = "test-uvicorn-fastapi-contextvars"
version = "0.1.0"
description = ""
authors = ["Yoshihide Taniguchi (ravelll) <ravelll.taniguchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
